--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -7,14 +7,21 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install gd pdo pdo_mysql
 
 # Instalar Composer
-COPY --from=composer:2.6 /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2.8.4 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /app
 
 COPY . .
 
+RUN touch /app/database/database.sqlite
+
+# Dar permisos adecuados
+RUN chmod -R 777 /app/storage /app/database
+
 # Instalar dependencias de Laravel
-RUN composer install
+RUN composer install --no-dev --prefer-dist
+
+RUN php artisan migrate
 
 EXPOSE 8000
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
